Added working fluid texture loader